--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Block">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">50dp</item>
+
+        <!--<item name="android:layout_weight">1</item>-->
+        <item name="android:background">#000</item>
+    </style>
+
+    <style name="AppTheme.Block2">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_marginLeft">100dp</item>
+
+        <!--<item name="android:layout_weight">1</item>-->
+        <item name="android:background">#000</item>
+    </style>
+
 </resources>
