--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,10 +4,13 @@
     android:layout_width="match_parent">
 
     <ImageView
+        android:id="@+id/iv_icon"
         android:layout_width="100dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:contentDescription="@string/image_description" />
 
     <TextView
+        android:id="@+id/tv_display"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 </LinearLayout>
