--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,9 +5,11 @@
 
     <ImageView
         android:layout_width="100dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/icon"/>
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/textView"/>
 </LinearLayout>
